Added Auth using Github

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-flash": "^0.0.2",
     "mongoose": "^8.0.3",
     "passport": "^0.5.3",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
