--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
