--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
+    "express-formidable": "^1.2.0",
+    "formidable": "^3.5.1",
     "mongoose": "^8.0.3",
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12",
